@@ -19,7 +19,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'org.springframework.boot' version '2.4.9'
     id 'info.solidsoft.pitest' version '1.7.4'
-    id 'com.github.ben-manes.versions' version '0.42.0'
+    id 'com.github.ben-manes.versions' version '0.41.0'
     id 'org.sonarqube' version '3.3'
     id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.24'
     id 'au.com.dius.pact' version '4.3.7' //don't upgrade or downgrade this or serenity reports will fail to generate
@@ -34,7 +34,7 @@ apply plugin: 'io.spring.dependency-management'
 
 def versions = [
         junit              : '5.8.2',
-        lombok             : '1.18.12',
+        lombok             : '1.18.22',
         gradlePitest       : '1.3.0',
         pitest             : '1.7.4',
         reformLogging      : '5.1.7',
@@ -65,9 +65,14 @@ pmd {
 group = 'uk.gov.hmcts.reform.judicialbooking'
 version = '0.0.1'
 
-allprojects {
-    sourceCompatibility = '11'
-    targetCompatibility = '11'
+tasks.withType(JavaExec).configureEach {
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 jacocoTestCoverageVerification {
@@ -146,6 +151,8 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
     doFirst {
         generateCucumberReports.enabled = true
         javaexec {
+            jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+            executable = javaLauncher.get().metadata.installationPath.asFile.absolutePath+"/bin/java"
             main = "uk.gov.hmcts.reform.judicialbooking.befta.JudicialBookingAmBeftaMain"
             classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
@@ -223,20 +230,19 @@ pact {
 jacocoTestReport {
     executionData(test)
     reports {
-        xml.enabled(true)
-        csv.enabled(false)
-        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+        xml.required = true
+        csv.required = false
+        xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     }
 }
 
 project.tasks['sonarqube'].dependsOn jacocoTestReport
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 pitest {
-    pitestVersion = "1.5.2"
     testPlugin = "junit5"
     targetClasses = ['uk.gov.hmcts.reform.*']
     excludedClasses = ['uk.gov.hmcts.reform.judicialbooking.JudicialBookingApplication',
@@ -396,7 +402,7 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
-    testImplementation 'com.github.hmcts:befta-fw:8.7.1'
+    testImplementation 'com.github.hmcts:befta-fw:8.7.2-CCD-3086.6'
     testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
 
     smokeTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
